--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -24,7 +24,16 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-    - name: Lint with flake8
     - name: Test with Unittest
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        EMAIL_FROM_USER: ${{ secrets.EMAIL_FROM_USER }}
+        EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+        DB_ENGINE: ${{ secrets.DB_ENGINE }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_PASSWORDDB_HOST: ${{ secrets.DB_PASSWORDDB_HOST }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+        
       run: |
         python manage.py test
