--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,6 +14,20 @@ jobs:
 
     runs-on: ubuntu-latest
 
+    services:
+      postgres:
+        image: postgres:10.8
+        env:
+          POSTGRES_USER: postgres
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_DB: github_actions
+
+        ports:
+          - 5433:5432
+
+        options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
+
+
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.9
@@ -34,6 +48,6 @@ jobs:
         DB_USER: ${{ secrets.DB_USER }}
         DB_PASSWORDDB_HOST: ${{ secrets.DB_PASSWORDDB_HOST }}
         DB_PORT: ${{ secrets.DB_PORT }}
-        
+
       run: |
         python manage.py test
