--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -51,4 +51,4 @@ jobs:
         DB_PORT: ${{ secrets.DB_PORT }}
 
       run: |
-        python manage.py test
+        coverage run manage.py test && coverage report --fail-under=95
