--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -38,6 +38,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    
+    
     - name: Test with Unittest
       env:
         SECRET_KEY: ${{ secrets.SECRET_KEY }}
@@ -51,4 +53,23 @@ jobs:
         DB_PORT: ${{ secrets.DB_PORT }}
 
       run: |
-        coverage run manage.py test && coverage report --fail-under=60
+        coverage run manage.py test && coverage report --fail-under=60 && coverage xml
+    
+    - name: Report coverage to codecov
+      env:
+        SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        EMAIL_FROM_USER: ${{ secrets.EMAIL_FROM_USER }}
+        EMAIL_HOST_PASSWORD: ${{ secrets.EMAIL_HOST_PASSWORD }}
+        DB_ENGINE: ${{ secrets.DB_ENGINE }}
+        DB_NAME: ${{ secrets.DB_NAME }}
+        DB_USER: ${{ secrets.DB_USER }}
+        DB_HOST: ${{ secrets.DB_HOST }}
+        DB_PASSWORD: ${{ secrets.DB_PASSWORD }}
+        DB_PORT: ${{ secrets.DB_PORT }}
+
+      uses: codecov/codecov-action@v1
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        files: ./coverage.xml
+        directory: ./coverage/reports/
+        fail_ci_if_error: true
