--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,11 @@
 asgiref==3.4.1
 coverage==5.5
+dj-database-url==0.5.0
 Django==3.2.5
+django-heroku==0.3.1
 Faker==8.10.3
+gunicorn==20.1.0
+psycopg2==2.9.1
 psycopg2-binary==2.9.1
 python-dateutil==2.8.2
 pytz==2021.1
@@ -9,3 +13,4 @@ six==1.16.0
 sqlparse==0.4.1
 text-unidecode==1.3
 validate-email==1.3
+whitenoise==5.3.0
